- renamed license - fixed radio buttons alignment - 0.2.7

--- a/webclient/public/stylesheets/webyast-time.css
+++ b/webclient/public/stylesheets/webyast-time.css
@@ -19,9 +19,9 @@
 #utc { vertical-align: middle; padding:0; margin:0;}
 
 /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
-input[type="radio"], input[type="checkbox"] { border: none; background: none; vertical-align:top;}
+input[type="radio"], input[type="checkbox"] { border: none; background: none; vertical-align: bottom; }
 
 .time_filedset { border: 1px solid #ddd;  border-radius: 0px; padding:5px 7px; margin-bottom:10px;  }
-.time_filedset legend { background-color: #FAFAFA; padding:2px 5px 2px 0px; color:#666; vertical-align:middle;  text-shadow: 1px 1px #FDFDFD; }
+.time_filedset legend { font-size:12px; background-color: #FAFAFA; padding:2px 5px 2px 0px; color:#666; vertical-align:middle;  text-shadow: 1px 1px #FDFDFD; }
 .time_filedset label { width: 190px!important; }
 
